@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-10-26 DP  1.8.1  Don't try to enable/disable prepared transaction related
+                      controls on pre-8.1 servers, per Karl Zellnig
 2007-10-12 DP  1.8.0  Avoid using a correlated subquery that Greenplum doesn't
                       support, per report from Jon Roberts.
 2007-09-24 DP  1.8.0  Allow GUCs to be set on functions in PostgreSQL 8.3 and
@@ -970,4 +972,5 @@ Date       Dev Ver    Change details
 2003-08-07 AP  0.9.2  help system cleanups, support of CHM help for win32.
 2003-08-07 AP  0.9.2  Added missing comment in domain property.
 2003-08-06 DP  0.9.2  Bumped version number.
+
 
